Specify generic types where missing. For Condition, looks like generic type needs to be ExperimentState most everywhere (?)